# heimdall

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml  pyrefly.toml
.github/workflows/: ci.yml
docs/: prd.md  rfc-001-heimdall.md
examples/: test_basic.py
src/heimdall/: __init__.py  cli.py  cli_impl.py  config.py  exceptions.py
src/heimdall/agent/: __init__.py  factory.py  filesystem.py  loop.py  schema.py  views.py
src/heimdall/agent/llm/: __init__.py  anthropic.py  base.py  bedrock.py  google.py  groq.py  ollama.py  openai.py  openrouter.py
src/heimdall/agent/prompts/: system_prompt.md
src/heimdall/browser/: __init__.py  demo.py  element.py  events.py  session.py
src/heimdall/collector/: __init__.py  context.py  export.py
src/heimdall/dom/: __init__.py  service.py
src/heimdall/events/: __init__.py  bus.py  types.py
src/heimdall/logging/: __init__.py  config.py  formatters.py
src/heimdall/models/: __init__.py
src/heimdall/persistence/: __init__.py  state.py
src/heimdall/tools/: __init__.py  actions.py  registry.py
src/heimdall/utils/: domain.py  media.py  text.py
src/heimdall/watchdogs/: __init__.py  base.py  dom.py  error.py  navigation.py  network.py
tests/: __init__.py  test_actions.py  test_agent_schema.py  test_agent_views.py  test_basic.py  test_bedrock_llm.py  test_collector_wiring.py  test_dom_node.py  test_dom_serializer.py  test_ollama_llm.py  test_pagination_detection.py  test_registry.py
todo/: unintegrated-features.md
