[project]
name = "heimdall"
version = "0.1.0"
description = "Browser automation agent that executes natural language tasks and collects context for automation script generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Team Heimdall" }
]
keywords = [
    "browser",
    "automation",
    "cdp",
    "chrome",
    "devtools",
    "testing",
    "agent",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "cdp-use>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]
openai = [
    "openai>=1.0.0",
]
openrouter = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
groq = [
    "groq>=0.4.0",
]
bedrock = [
    "boto3>=1.34.0",
]
all = [
    "heimdall[cli]",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "groq>=0.4.0",
    "boto3>=1.34.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "ty>=0.0.7",
    "mypy>=1.19.1",
]

[project.scripts]
heimdall = "heimdall.cli:app"

[project.urls]
Homepage = "https://github.com/madanlalit/heimdall"
Documentation = "https://github.com/madanlalit/heimdall#readme"
Repository = "https://github.com/madanlalit/heimdall"
Issues = "https://github.com/madanlalit/heimdall/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["cdp_use", "cdp_use.*"]
ignore_missing_imports = true

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src/"]
exclude = ["browser-use/", "examples/", "tests/"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
# Enable stricter rules (off by default)
possibly-unresolved-reference = "warn"
redundant-cast = "warn"
unused-ignore-comment = "warn"
# Treat deprecation warnings as errors
deprecated = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
]
